--- a/my-gatsby-project/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/my-gatsby-project/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,29 +1,29 @@
 ## Projects
 
-<ProjectCard title="Chev Tribute Site" link="https://www.behance.net/gallery/58937147/Freiheit" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
-<img src="https://lh3.googleusercontent.com/gLFXBY8Q1zIfae7sRevd0zRbYhDXcMdivI7uBbIlLc24YQnuMs9dn0zNL-JIFTsfwFq3TOBvImXbGABgVHtOXXCBezz4j5Qe--zyFZerPwMY_oNraJf9hRzYK-a1ofDMI1ZD3ztcUw=w2400"
+<ProjectCard title="Movie Site API" link="https://www.behance.net/gallery/58937147/Freiheit" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
+<img src="https://lh3.googleusercontent.com/kN9ide9Tqv-djhM1kqBnhGA7X-KCvobjZwjQx0ABcFBOZJl1kglahPfXYXjBJLWoQ41GeWJZ4KSEOwSeF3oe50EytPfGjt0CioGIP4gv6rybHXlb9ss0Q4roBYnjs5vyk6q6j_IHIg=w2400"
     alt=""
     style="width: 100%; height: auto;" />
-<br/>This project show show my skills with multimedia projects
+<br/>This project show show my skills with API projects
 </ProjectCard>
 
-<ProjectCard title="Landing Page" link="https://www.behance.net/gallery/58937147/Freiheit" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
-<img src="https://lh3.googleusercontent.com/gLFXBY8Q1zIfae7sRevd0zRbYhDXcMdivI7uBbIlLc24YQnuMs9dn0zNL-JIFTsfwFq3TOBvImXbGABgVHtOXXCBezz4j5Qe--zyFZerPwMY_oNraJf9hRzYK-a1ofDMI1ZD3ztcUw=w2400"
+<ProjectCard title="Custom Quiz" link="https://www.behance.net/gallery/58937147/Freiheit" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
+<img src="https://lh3.googleusercontent.com/ZZWU89Ly3rUBGZhWr4fwptK35mA-maG3uQcMdVszp2V-eux2nPK-Bpf6fdcfJ_Pz6S9U54GcyH6ifxbUipuELMbHzdyKd6mal4Q6WAreaMYpiPQs0TNxDQU8el8jZSgpUJS2gCAMzw=w2400"
     alt=""
     style="width: 100%; height: auto;" />
-<br/>This project show show my skills in setting up a modern landing page
+<br/>This project show show my skills in setting up a quiz with react
 </ProjectCard>
 
-<ProjectCard title="Survey Page" link="/survey" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
-<img src="https://lh3.googleusercontent.com/-Io5jeqP3Yh0zbgG1RLW76VqnbbT3Tz-978OlzveafCBNgxNT6jb3OBXnmAAy08wfPW_4sBhzIy3zF65fMc8fEAeqvDydWWYqlA1-v5z02T2wROWNWE9H6J_-dNZGsWHWHCWReBYog=w2400"
+<ProjectCard title="Budget Planner" link="/survey" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
+<img src="https://lh3.googleusercontent.com/YMAlc_lLgHkQFWJdPvzZxJ9rCVDL5A7C_Ld_OoKxnmLskfgof9Ko4zz0BJbBJqapCQTCSmHaUgOqiq2s51EtqR0V-G_WVm3vNyE5VBfACDtyK8t8IDcbiE3n1jvaQ0TgWHxuXybOmg=w2400"
     alt=""
     style="width: 100%; height: auto;" />
-<br/>This project show show my skills in creating a website survey 
+<br/>This project show show my skills in creating a budget planner
 </ProjectCard>
 
 <ProjectCard title="To Do App" link="/todo" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
-<img src="https://lh3.googleusercontent.com/VpnBirCMyYnwHvzilQ1aKI9gehMT8C17EjmHEXAtSySrnODC-Ct59FWMn7e3sIuoaXnYzLShIWY586PR8LkFJ9WT7fk-tmCFJI1IZwNdmy1ldaSokBYAAgHf4oLcNAeSluz5J1wMbQ=w2400"
+<img src="https://lh3.googleusercontent.com/swhfOlomk6J7iBbyoyyxFwGx04cSV0Uf6N1l3C1wIh1iQUAy6ISbNReyBxu2S63zdbBYFDlEDBxdDJcdrScP1MXpqOBZ4R7Jfmzbiz8kOSJK1cCjZzlJz6QovO27bH0eIStompzKSw=w2400"
     alt=""
     style="width: 100%; height: auto;" />
-<br/>This is a classic React - Redux To Do App with all the bells and whistles
+<br/>This is a classic React  To Do App with all the bells and whistles
 </ProjectCard>
